--- a/AutomateFlipkart/pom.xml
+++ b/AutomateFlipkart/pom.xml
@@ -60,6 +60,12 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.10</version>
 		</dependency>
+		<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>1.18.22</version>
+		<scope>provided</scope>
+	</dependency>
 
   </dependencies>
 
